syntax = "proto3";

option java_package = "org.example.banksservice.grpc";
option java_multiple_files = true;
option java_outer_classname = "BankProto";

message BankRequest {
  int64 bankId = 1;
}

message BankResponse {
  int64 id = 1;
  string name = 2;
  string country = 3;
  string address = 4;
  int32 phone = 5;
}

service BankService {
  rpc getBank(BankRequest) returns (BankResponse);
}